<resources>
    <string name="app_name">Xephalon</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="or">Or</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="logout_user">Logout User</string>

    <string-array name="conversions">
        <item>Decimal</item>
        <item>Binary</item>
        <item>Hexadecimal</item>
        <item>Octal</item>
    </string-array>
</resources>